--- a/Site.Master
+++ b/Site.Master
@@ -50,8 +50,10 @@
                 <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item"><a class="nav-link" runat="server" href="~/">Inicio</a></li>
-                        <li class="nav-item"><a class="nav-link" runat="server" href="~/About">Acerca de</a></li>
-                        <li class="nav-item"><a class="nav-link" runat="server" href="~/Contact">Contacto</a></li>
+                        <li class="nav-item"><a class="nav-link" runat="server" href="~/Catalogos/Pelicula/ListadoPeliculas.aspx">Peliculas</a></li>
+                        <li class="nav-item"><a class="nav-link" runat="server" href="~/Catalogos/GeneroPelicula/ListadoGeneroPelicula.aspx">Genero Peliculas</a></li>
+                        <li class="nav-item"><a class="nav-link" runat="server" href="~/Catalogos/Ticket/ListadoTicket.aspx">Tickets</a></li>
+                        <li class="nav-item"><a class="nav-link" runat="server" href="~/Catalogos/Sala/ListadoSala.aspx">Sala</a></li>
                     </ul>
                 </div>
             </div>
